--- a/site/css/external.css
+++ b/site/css/external.css
@@ -3,13 +3,20 @@
   box-sizing: border-box;
 }
 h1 {
-  margin-bottom: 15px;
+  margin-bottom: 50px;
+  text-align: center;
+}
 
+h2{
+  text-align: center;
+  margin-top: 0px;
+  margin-left: 60%;
+  border: 1px solid black;
+  background-color: pink;
 }
 
 p {
-  border: 1px solid black;
-  background-color: #A52A2A;
+  background-color: gray;
   width: 90%;
   height: 150px;
   margin-right: auto;
@@ -27,10 +34,14 @@ p {
 @media (min-width: 992px) {
   .col-lg-4 {
     float: left;
-    border: 1px solid green;
+    border: 1px solid black;
+    background-color: gray;
+    margin: 5px;
+
   }
   .col-lg-4 {
-    width: 33.33%;
+    width: 32.5%;
+
   }
  
 }
@@ -39,7 +50,9 @@ p {
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-6 {
     float: left;
-    border: 1px solid green;
+    border: 1px solid black;
+    background-color: gray;
+    margin: 5px;
   }
 
   .col-md-6 {
@@ -49,13 +62,15 @@ p {
 		
 		/********** Small devices only **********/
 @media (max-width: 767px) {
- .col-md-6 {
+ .col-sm-8 {
     float: left;
-    border: 1px solid green;
+    border: 1px solid black;
+    background-color: gray;
+    margin: 5px;
   }
  
-  .col-md-6 {
-    width: 50%;
+  .col-sm-8 {
+    width: 100%;
   }
  
 }
